--- a/app/src/main/res/layout/activity_target.xml
+++ b/app/src/main/res/layout/activity_target.xml
@@ -42,11 +42,21 @@
             android:text="You Are Being Hacked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
             android:id="@+id/textViewHacked"
             android:textSize="20sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:layout_marginStart="11dp"
+            android:layout_alignBaseline="@+id/buttonPowerup"
+            android:layout_alignBottom="@+id/buttonPowerup"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:id="@+id/buttonPowerup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="14dp"
+            android:layout_toEndOf="@+id/progressBarTarget"
+            android:text="Power-ups" />
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
